edited models section